--- a/configs/pc/llama_1B_comp.yaml
+++ b/configs/pc/llama_1B_comp.yaml
@@ -1,6 +1,6 @@
 defaults:
-  - ../_cluster@_here_: helios #helios
-  # - ../_cluster@_here_: entropy
+  # - ../_cluster@_here_: helios #helios
+  - ../_cluster@_here_: entropy
   - ../_model/llama@_here_: projected_1B
   - ../_trainer@_here_: llama
   - ../_dataset@_here_: fineweb
@@ -37,24 +37,23 @@ trainer:
     # - 101
     - 2048
     # - 4096
-    # - 6144
     # - 8192
     # - 12288
     # - 16384
 
-  # learning_rate: 12 # optimal 10%
+  learning_rate: 12 # optimal 10%
   # learning_rate: 13 # optimal 30%
   # learning_rate: 14 # optimal 1B 50%
   # learning_rate: 15 # optimal 75%
   # learning_rate: 14 #optimal fo randomi 50%
   ^learning_rate: 
-  #   # - 10
-    - 11
-    - 12
-    - 13
-    # - 14
-  #   # - 15
-  #   # - 16
+    - 10
+    # - 11
+    # - 12
+    # - 13
+    - 14
+    # - 15
+    # - 16
   #   # - 17
 
   scheduler:
@@ -64,15 +63,15 @@ trainer:
   checkpoint:
    load:
     type: huggingface
-    # path: null #dev
     path: "meta-llama/Llama-3.2-1B"
     # path: "/net/scratch/hscra/plgrid/plgmstefaniak/checkpoints/llama1_ta3/llama1_ta3/" # helios ta3b
     # path: /storage_nvme_3/mstefaniak/nano_checkpoints/llama1_ta3/66751/0 # entropy ta10b
-   save:  
-    type: nano
-    path: null #dev
-    # path: /storage_nvme_3/mstefaniak/nano_checkpoints/tmp # entropy
-    # path: /net/scratch/hscra/plgrid/plgmstefaniak/checkpoints/tem # #helios
+  #  save:  
+  #   type: nano
+  #   path: null #dev
+  #   # path: /storage_nvme_3/mstefaniak/nano_checkpoints/tmp # entropy
+  #   # path: /net/scratch/hscra/plgrid/plgmstefaniak/checkpoints/tem # #helios
+
 
 infrastructure:
   metric_logger:
@@ -93,25 +92,27 @@ infrastructure:
       # - random_occlude
       # - smart_init
       # - no_Wa
-      - random_W
+      # - random_W
       - REBUTAL
+      - freeze_projections
+      # - print_occluded_weights
   
   slurm: 
     job-name: ${infrastructure.metric_logger.name}
     gres: gpu:4
-    # time: "0-0:15:00"
-    time: "0-3:00:00"
+    # time: "0-0:20:00"
+    # time: "0-3:00:00"
     # time: "0-8:00:00"
-    # time: "0-24:00:00"
+    time: "0-24:00:00"
 
 apply_functions:
   - _target_: src.projected_compression.compression.init_compression
     _partial_: true
-    # dimensions_importances_path: /storage_nvme_3/mstefaniak/pc/fw_importances_8m/minitron_dimensions_importances.pt # entropy ACTIVATIONS llama31
+    dimensions_importances_path: /storage_nvme_3/mstefaniak/pc/fw_importances_8m/minitron_dimensions_importances.pt # entropy ACTIVATIONS llama31
     # dimensions_importances_path: /storage_nvme_3/mstefaniak/pc/fw_importances_8m/random_dimensions_importances.pt # entropy RANDOM llama31
     # dimensions_importances_path: /storage_nvme_3/mstefaniak/nano_checkpoints/tmp/68549/0/magnitude_dimensions_importances.pt # entropy MAGNITUDE llama31
 
-    dimensions_importances_path: /net/scratch/hscra/plgrid/plgmstefaniak/checkpoints/llama_1_fw_importances/minitron_dimensions_importances.pt # #helios ACTIVATIONS llama31
+    # dimensions_importances_path: /net/scratch/hscra/plgrid/plgmstefaniak/checkpoints/llama_1_fw_importances/minitron_dimensions_importances.pt # #helios ACTIVATIONS llama31
     # dimensions_importances_path: /net/scratch/hscra/plgrid/plgmstefaniak/checkpoints/llama_1_fw_importances/random_dimensions_importances.pt # #helios RANDOM llama31
     # dimensions_importances_path: /net/home/plgrid/plgmstefaniak/checkpoints/llama_1_importances/magnitude_dimensions_importances.pt # #helios RANDOM llama31
     
