--- a/configs/tiny_remote_ctx_scl.yaml
+++ b/configs/tiny_remote_ctx_scl.yaml
@@ -1,9 +1,9 @@
 defaults:
-  - _cluster@_here_: helios
+  - _cluster@_here_: entropy
   - _model@_here_: k16
   - _trainer@_here_: context_scaling
   - _dataset@_here_: ctx_scl_dataset
-  - _checkpoints@_here_: none
+  - _checkpoints/context_scaling@_here_: shared_entropy
   - _misc@_here_: default
   - _eval@_here_: none
   - _self_
@@ -28,8 +28,8 @@ trainer:
     num_workers: 8
     dataset:
       load_dataset_fn:
-        # path: /storage_nvme_1/llm-random/datasets/c4/long_context_2048n8192
-        path: /net/scratch/hscra/plgrid/plgj321m/c4/long_context_2048n8192
+        path: /storage_nvme_1/llm-random/datasets/c4/long_context_2048n8192
+        # path: /net/scratch/hscra/plgrid/plgj321m/c4/long_context_2048n8192
 
 infrastructure:
   metric_logger:
@@ -39,7 +39,7 @@ infrastructure:
       - remote
       - tiny
       - context_scaling
-      - "1712"
+      - "savemodel"
 
   slurm:
     time: "00:10:00"
