--- a/configs/ctx_scl_k16_long_mha.yaml
+++ b/configs/ctx_scl_k16_long_mha.yaml
@@ -1,6 +1,6 @@
 defaults:
-  - _cluster@_here_: helios
-  - _model@_here_: k16
+  - _cluster@_here_: entropy
+  - _model/context_scaling@_here_: k16
   - _trainer@_here_: context_scaling
   - _dataset@_here_: ctx_scl_dataset
   - _checkpoints/context_scaling@_here_: shared_helios
@@ -17,7 +17,7 @@ common:
 trainer:
   gradient_accumulation_steps: 1
   n_steps: 320_001
-  ^learning_rate: [12, 13]
+  learning_rate: 12
   # ^learning_rate: [9, 10, 11]
   # learning_rate: 10
   eval_interval: 5000
@@ -45,8 +45,8 @@ trainer:
     num_workers: 8
     dataset:
       load_dataset_fn:
-        # path: /storage_nvme_1/llm-random/datasets/c4/long_context_2048n8192
-        path: /net/scratch/hscra/plgrid/plgj321m/c4/long_context_2048n8192
+        path: /storage_nvme_1/llm-random/datasets/c4/long_context_2048n8192
+        # path: /net/scratch/hscra/plgrid/plgj321m/c4/long_context_2048n8192
 
 infrastructure:
   metric_logger:
