--- a/configs/ctx_scl_k16_long_mha.yaml
+++ b/configs/ctx_scl_k16_long_mha.yaml
@@ -13,6 +13,8 @@ common:
   batch_size: 64
   kv_heads: 16
   dff: 2560
+  data_seed: 123
+  model_seed: 123
 
 trainer:
   gradient_accumulation_steps: 1
@@ -40,12 +42,7 @@ trainer:
       load_dataset_fn:
         path: ${cluster_switch.eval_path_c4}
 
-  eval_long_ctx_dataloader:
-    num_workers: 8
-    dataset:
-      load_dataset_fn:
-        path: /storage_nvme_1/llm-random/datasets/c4/long_context_2048n8192
-        # path: /net/scratch/hscra/plgrid/plgj321m/c4/long_context_2048n8192
+  eval_long_ctx_dataloader: null
 
 infrastructure:
   metric_logger:
