--- a/configs/ctx_scl_k16_long_mqa.yaml
+++ b/configs/ctx_scl_k16_long_mqa.yaml
@@ -1,6 +1,6 @@
 defaults:
-  - _cluster@_here_: helios
-  - _model@_here_: k16
+  - _cluster@_here_: entropy
+  - _model/context_scaling@_here_: k16
   - _trainer@_here_: context_scaling
   - _dataset@_here_: ctx_scl_dataset
   - _checkpoints/context_scaling@_here_: shared_helios
@@ -13,6 +13,8 @@ common:
   batch_size: 64
   kv_heads: 1
   ^dff: [2560, 3200, 3520, 3840]
+  data_seed: 123
+  model_seed: 123
 
 trainer:
   gradient_accumulation_steps: 1
@@ -41,12 +43,7 @@ trainer:
       load_dataset_fn:
         path: ${cluster_switch.eval_path_c4}
 
-  eval_long_ctx_dataloader:
-    num_workers: 8
-    dataset:
-      load_dataset_fn:
-        # path: /storage_nvme_1/llm-random/datasets/c4/long_context_2048n8192
-        path: /net/scratch/hscra/plgrid/plgj321m/c4/long_context_2048n8192
+  eval_long_ctx_dataloader: null
 
 infrastructure:
   metric_logger:
