--- a/configs/_cluster/lem.yaml
+++ b/configs/_cluster/lem.yaml
@@ -1,5 +1,5 @@
 infrastructure:
-  server: helios
+  server: lem
   max_concurrent_jobs: null
   slurm:
     cpus_per_gpu: 12
@@ -7,12 +7,12 @@ infrastructure:
     job-name: test
     mem_per_gpu: 90G
     nodes: 1
-    partition: plgrid-gpu-gh200
+    partition: plgrid-lem-gpu-h100
     time: "2-00:00:00"
 
   script:
-    - 'module load ML-bundle/25.04'
-    - 'export PROJECT_HOME_PATH=$PLG_GROUPS_STORAGE/plggllmeffi/nano'
+    - 'ml CUDA/12.4.0'
+    - 'export PROJECT_HOME_PATH=/lustre/pd01/plgrid/plgllmefficont2/nano/context_scaling'
     - 'export HF_HOME=$PROJECT_HOME_PATH/hf_cache'
     
     # hydra errors
@@ -31,7 +31,7 @@ infrastructure:
     - 'cd -'
 
 cluster_switch:
-  train_path_c4: "/net/scratch/hscra/plgrid/plgmaciejpioro/c4/train"
-  eval_path_c4: "/net/scratch/hscra/plgrid/plgmaciejpioro/c4/validation"
-  train_path_fineweb: "/net/scratch/hscra/plgrid/plgmaciejpioro/fineweb-edu/train/train"
-  eval_path_fineweb: "/net/scratch/hscra/plgrid/plgmaciejpioro/fineweb-edu/train/train"
+  train_path_c4: null
+  eval_path_c4: null
+  train_path_fineweb: /lustre/pd03/plgrid/plgllmefficont2/crewtool/proba2/fineweb-edu/train/train
+  eval_path_fineweb: /lustre/pd03/plgrid/plgllmefficont2/crewtool/proba2/fineweb-edu/train/train
