--- a/configs/_trainer/context_scaling.yaml
+++ b/configs/_trainer/context_scaling.yaml
@@ -14,9 +14,10 @@ trainer:
 
   scheduler:
     _partial_: true
-    _target_: src.core.schedulers.get_cosine_scheduler_with_warmup
-    final_lr_fraction: 0.1
+    _target_: src.core.schedulers.WSDScheduler
+    n_steps: ${trainer.n_steps}
     warmup_steps: ${eval:'int(${trainer.n_steps} * 0.01)'}
+    decay_steps: ${eval:'int(${trainer.n_steps} * 0.1)'}
 
   distributed:
     fsdp2:
