--- a/configs/context_scaling/basic_wsd_fwedu_lem_grid/mqa.yaml
+++ b/configs/context_scaling/basic_wsd_fwedu_lem_grid/mqa.yaml
@@ -19,7 +19,7 @@ common:
 trainer:
   gradient_accumulation_steps: 1
   n_steps: 320_001
-  ^learning_rate: [11, 12, 13]
+  ^learning_rate: [10, 11, 12, 13]
   eval_interval: 5000
   eval_long_ctx_interval: -1
   n_eval_long_ctx_steps: 64
@@ -27,7 +27,6 @@ trainer:
   checkpoint:
     save:
       type: nano
-      # path: checkpoint
 
   train_dataloader:
     num_workers: 2
