--- a/configs/context_scaling/basic_wsd_fwedu_lem_grid/mha.yaml
+++ b/configs/context_scaling/basic_wsd_fwedu_lem_grid/mha.yaml
@@ -21,8 +21,8 @@ common:
 trainer:
   gradient_accumulation_steps: 1
   n_steps: 320_001
-  learning_rate: 12
-  # ^learning_rate: [11, 12, 13]
+  learning_rate: 11
+  # ^learning_rate: [10, 11, 12, 13]
   eval_interval: 5000
   eval_long_ctx_interval: -1
   n_eval_long_ctx_steps: 64
@@ -30,7 +30,6 @@ trainer:
   checkpoint:
     save:
       type: nano
-      # path: checkpoint
 
   train_dataloader:
     num_workers: 2
