save 10 ckpt's per exp

--- a/configs/_checkpoints/context_scaling/shared_lem.yaml
+++ b/configs/_checkpoints/context_scaling/shared_lem.yaml
@@ -2,7 +2,7 @@ trainer:
   checkpoint:
     save:
       type: nano
-      interval: -1
+      interval: ${eval:'((${trainer.n_steps} - 1) / 10)'}
       path: /lustre/pd01/plgrid/plgllmefficont2/nano/context_scaling/models
       model_checkpoint_filename: __model_checkpoint_filename.pt
       training_state_filename: __training_state_filename.pt
