--- a/configs/_trainer/llama_distillation.yaml
+++ b/configs/_trainer/llama_distillation.yaml
@@ -154,10 +154,11 @@ trainer:
         - ${model.head._target_}
   
   train_dataloader:
-    tokenize_fn:
-      _target_: src.core.datasets.llama_tokenize_fn
+    dataset:
+      tokenize_fn:
+        _target_: src.core.datasets.llama_tokenize_fn
       
-
   eval_dataloader:
-    tokenize_fn:
-      _target_: src.core.datasets.llama_tokenize_fn
+    dataset:
+      tokenize_fn:
+        _target_: src.core.datasets.llama_tokenize_fn
