repair ND grid and add larger ff for mqa

--- a/configs/context_scaling/basic_wsd_fwedu_lem_grid/mqa.yaml
+++ b/configs/context_scaling/basic_wsd_fwedu_lem_grid/mqa.yaml
@@ -12,7 +12,8 @@ common:
   sequence_length: 2048
   batch_size: 64
   kv_heads: 1
-  ^dff: [3200, 3520]
+  ^dff: [3840]
+  # ^dff: [3200, 3520, 3840]
   data_seed: 123
   model_seed: 123
 
