--- a/configs/pc_project/memory_efficient/8b.yaml
+++ b/configs/pc_project/memory_efficient/8b.yaml
@@ -50,6 +50,9 @@ trainer:
       path: ??? # CHANGE
       interval: 1023
 
+  only_compress_model_gradient_clipping: true
+
+
 model:
   cast_bfloat16: false # whether to cast bfloat16 when calculating compressed matrix
 
