--- a/configs/pc_project/llama_8B_importances.yaml
+++ b/configs/pc_project/llama_8B_importances.yaml
@@ -56,7 +56,7 @@ apply_functions:
     dataloader: ${trainer.train_dataloader}
     dmodel: ${common.dmodel}
     dff: ${common.dff}
-    calibration_dataset_size: 8192 # nvidia used 2k steps of 4k sequence lenght - this is the saturaion poin - longer doesnt improve miningfully
+    calibration_dataset_size: 8192 # nvidia used 2k steps of 4k sequence length - this is the saturation point - longer doesn't improve meaningfully
     seq_len: ${common.sequence_length}
     total_batch_size: ${trainer.train_dataloader.total_batch_size}
     n_blocks: ${model.encoder.n_blocks}
