Add support for W&B (#142)
* Add W&B to pixi

* Add W&B logger

* Don't track ./wandb in git

* Add support for W&B

* Add sample config

* Update src/core/metric_loggers.py

Co-authored-by: Michał <45643363+crewtool@users.noreply.github.com>

* Remove legacy MetricLoggerConfig class

* Remove an old comment

* Fix passing lists to neptune

* Format w/ black

* Add fixing pixi

---------

Co-authored-by: Michał <45643363+crewtool@users.noreply.github.com>

--- a/configs/_misc/default.yaml
+++ b/configs/_misc/default.yaml
@@ -1,10 +1,10 @@
 
 infrastructure:
   metric_logger:
-    _target_: src.definitions.MetricLoggerConfig
     project_name: pmtest/llm-random
     heavy_metrics_calculation_interval: 100
     new_neptune_job: true
+    new_wandb_job: true
     type: neptune
     name: default
     tags:
